--- a/responsive.css
+++ b/responsive.css
@@ -19,6 +19,7 @@
     }
 
     .sidebar .close {
+        display: block !important;
         position: absolute;
         top: 0;
         right: 0;
